--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -15,7 +15,7 @@
 <nav id="main-header">
   <a href="{{ "/" | relLangURL }}">
     <img src="{{ "/svg/logo-ic-branca.svg" | relURL }}" alt="Logo do IC" width="80px">
-    <p>Instituto de Computação<br>UFRJ</p>
+    <p>{{ i18n "instituto_de_computacao" }}<br>UFRJ</p>
   </a>
 
   <ul>
