--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -29,6 +29,9 @@
       <br>Tel.: +55 21 3938-9516
     </p>
     <p>
+      secretaria at ic.ufrj.br
+    </p>
+    <p>
       <a href="{{ i18n "link_mais_informacoes_contato" }}">{{ i18n "mais_informacoes_contato" }}</a>
     </p>
   </div>
