--- a/themes/temaic/layouts/index.pt.html
+++ b/themes/temaic/layouts/index.pt.html
@@ -2,7 +2,21 @@
 
 {{ define "main" }}
 
-Index em Port
+<style>
+.vermelho {
+    color: red;
+    font-weight: bold;
+    font-size: 150%;
+    padding: 50px;
+}
+</style>
+
+<p class="vermelho">
+  Bem-vindo ao novo site do Instituto de Computação.
+  <br>Esse site está em desenvolvimento.
+  <br>Uma lista de artigos pode ser encontrada aqui:
+  <br><a href="/artigos/">Clique Aqui</a>
+</p>
 
 {{ end }}
 
