menu com clique em vez de hover

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -22,7 +22,7 @@
     {{ $menu := index site.Data.menus (printf "principal.%s" .Site.Language.Lang) }}
     {{ range $menu }}
       <li>
-        <span>{{ .name }}</span>
+        <button type="button" aria-expanded="false" aria-controls="{{ .name | urlize }}-dropdown">{{ .name }}</button>
         <ul>
           {{ range .children }}
             <li>
