renomeado artigos para info

--- a/themes/temaic/layouts/index.pt.html
+++ b/themes/temaic/layouts/index.pt.html
@@ -15,7 +15,8 @@
   Bem-vindo ao novo site do Instituto de Computação.
   <br>Esse site está em desenvolvimento.
   <br>Uma lista de artigos pode ser encontrada aqui:
-  <br><a href="/artigos/">Clique Aqui</a>
+  <br><a href="/info/">Lista de artigos de informação</a>
+  <br><a href="/noticias/">Lista de notícias</a>
 </p>
 
 {{ end }}
