Remover campo "mostrar_site". Usar "site" para todo mundo
Sempre usar a URL explícita do website do professor, em vez de ter essa flag
"mostrar_site" que calcula o valor padrão. Um pouquinho de copy-paste não faz
mal a ninguém; esses usernames e links de website nunca vão mudar no futuro.

- É bom evitar lógica de domínio nos templates.
- Hoje não é bem definido o que ocorre se mostrar_site=false e site=url
- Um campo só em vez de dois; menos coisa pra documentar.
- É auto evidente qual é o URL do site. Não tem que saber o "default".

--- a/layouts/shortcodes/docentes.html
+++ b/layouts/shortcodes/docentes.html
@@ -12,8 +12,8 @@
     {{ range $data }}
       <tr>
         <td>
-          {{ if .mostrar_site }}
-            <a href="{{ .site | default (printf "https://dcc.ufrj.br/~%s/" .username ) }}">
+          {{ if .site}}
+            <a href="{{.site}}">
               {{ .nome }}
             </a>
           {{ else }}
