--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -29,7 +29,7 @@
       <br>Tel.: +55 21 3938-9516
     </p>
     <p>
-      secretaria at ic.ufrj.br
+      <span class="email">secretaria@<span>ic.</span>ufrj.<span>gov.</span>br</span>
     </p>
     <p>
       <a href="{{ i18n "link_mais_informacoes_contato" }}">{{ i18n "mais_informacoes_contato" }}</a>
