adicionado Sobre o BCC

--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -485,6 +485,10 @@ article input[type="checkbox"]:checked {
 	background-color: var(--cor-accent-artigo);
 }
 
+article img {
+	width: 100%;
+}
+
 
 
 
