--- a/themes/temaic/layouts/_default/single.html
+++ b/themes/temaic/layouts/_default/single.html
@@ -6,10 +6,10 @@
   </article>
   <ul class="authors">
     {{ range .Params.Autores }}
-      {{ $author := index site.Data.authors . }}
+      {{ $author := index site.Data.docentes . }}
       <li>
         <img src="{{ $author.avatar }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
-        <span>{{ $author.name }}</span>
+        <span>{{ $author.nome }}</span>
         <p>
           {{ index $author.bio site.Language.Lang }}
         </p>
