--- a/themes/temaic/layouts/autores/list.html
+++ b/themes/temaic/layouts/autores/list.html
@@ -1,13 +1,13 @@
 {{ define "title" }}
-  {{ $author := index site.Data.authors (.Title | urlize) }}
-  {{ $author.name }}
+  {{ $author := index site.Data.docentes (.Title | urlize) }}
+  {{ $author.nome }}
 {{ end }}
 
 {{ define "main" }}
-  {{ $author := index site.Data.authors (.Title | urlize) }}
-  <div class="masshead"><h1>{{ $author.name }}</h1></div>
+  {{ $author := index site.Data.docentes (.Title | urlize) }}
+  <div class="masshead"><h1>{{ $author.nome }}</h1></div>
   <article>
-    <p>Postagens de {{ $author.name }}:</p>
+    <p>Postagens de {{ $author.nome }}:</p>
     <ul>
       {{ range .Pages }}
         <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
@@ -17,7 +17,7 @@
   <ul class="authors">
     <li>
       <img src="{{ $author.avatar }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
-      <span>{{ $author.name }}</span>
+      <span>{{ $author.nome }}</span>
       <p>
         {{ index $author.bio .Site.Language.Lang }}
       </p>
