--- a/themes/temaic/layouts/autores/terms.html
+++ b/themes/temaic/layouts/autores/terms.html
@@ -4,10 +4,10 @@
   <div class="masshead"><h1>{{ i18n "lista_de_autores" }}</h1></div>
   <ul class="authors">
     {{ range .Pages }}
-      {{ $author := index site.Data.authors ( .Page.Title | urlize ) }}
+      {{ $author := index site.Data.docentes ( .Page.Title | urlize ) }}
       <li>
 	<img src="{{ $author.avatar }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
-        <span>{{ $author.name }}</span>
+        <span>{{ $author.nome }}</span>
         <p>
           {{ index $author.bio .Site.Language.Lang }}
         </p>
