--- a/themes/temaic/layouts/autores/terms.html
+++ b/themes/temaic/layouts/autores/terms.html
@@ -2,12 +2,12 @@
 
 {{ define "main" }}
   <div class="masshead"><h1>{{ i18n "lista_de_autores" }}</h1></div>
-  <ul class="authors">
+  <ul class="cards-pessoais">
     {{ range .Pages }}
       {{ $author := index site.Data.docentes ( .Page.Title | urlize ) }}
-      <li>
+      <li class="card-pessoal">
 	<img src="{{ $author.avatar }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
-        <span>{{ $author.nome }}</span>
+        <span class="nome">{{ $author.nome }}</span>
         <p>
           {{ index $author.bio .Site.Language.Lang }}
         </p>
