--- a/layouts/shortcodes/docentes.html
+++ b/layouts/shortcodes/docentes.html
@@ -1,5 +1,5 @@
 {{- $data := slice -}}
-{{- range $key, $value := .Site.Data.docentes -}}
+{{- range $key, $value := .Site.Data.pessoas_e_grupos -}}
   {{- $item := merge (dict "username" $key) $value -}}
   {{- $data = $data | append $item -}}
 {{- end -}}
@@ -12,7 +12,7 @@
   {{ range $data }}
     {{ if .cargo | in $cargos_professores }}
       <li class="card-pessoal">
-        <img src="{{ .avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
+        <!--<img src="{{ .avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">-->
         <span class="nome">{{ .nome }}</span>
         <span class="cargo">{{ i18n .cargo }}</span>
         {{ if .email }}
