--- a/themes/temaic/layouts/autores/terms.html
+++ b/themes/temaic/layouts/autores/terms.html
@@ -5,9 +5,9 @@
   <article>
     <ul class="cards-pessoais">
       {{ range .Pages }}
-        {{ $author := index site.Data.docentes ( .Page.Title | urlize ) }}
+        {{ $author := index site.Data.pessoas_e_grupos ( .Page.Title | urlize ) }}
         <li class="card-pessoal">
-    <img src="{{ $author.avatar }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
+    <img src="{{ $author.avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
           <span class="nome">{{ $author.nome }}</span>
           <p>
             {{ index $author.bio .Site.Language.Lang }}
