menor fonte para o rodapé

--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -305,6 +305,7 @@ footer {
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
+	font-size: 90%;
 
 	color: var(--cor-texto-branco);
 }
