--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -6,19 +6,13 @@
       <br>Avenida Athos da Silveira Ramos, 274
       <br>Cidade Universitária
       <br>Rio de Janeiro, RJ, Brasil
-    </p>
-    <p>
-      CEP: 21941-916
+      <br>CEP: 21941-916
     </p>
   </div>
   <div>
-    <span>{{ i18n "endereco_correspondencia" }}</span>
+    <span>Redes Sociais</span>
     <p>
-      Instituto de Computação
-      <br>Universidade Federal do Rio de Janeiro
-      <br>Caixa Postal: 68.530
-      <br>CEP: 21941-590
-      <br>Rio de Janeiro, RJ, Brasil
+      ...
     </p>
   </div>
   <div>
