melhores redes sociais no footer

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -10,9 +10,17 @@
     </p>
   </div>
   <div>
-    <span>Redes Sociais</span>
+    <span>{{ i18n "redes-sociais" }}</span>
     <p>
-      ...
+      <a href="https://www.youtube.com/@institutodecomputacao-ufrj2797" target="_blank" rel="noreferrer">
+        {{ i18n "youtube-footer" }}
+      </a>
+      <br><a href="https://github.com/ic-ufrj" target="_blank" rel="noreferrer">
+        {{ i18n "github-footer" }}
+      </a>
+      <br><a href="https://bit.ly/telegram_coord_icufrj" target="_blank" rel="noreferrer">
+        {{ i18n "telegram-footer" }}
+      </a>
     </p>
   </div>
   <div>
@@ -33,9 +41,9 @@
 
 <div class="inferior">
   <span class="copyright">{{ i18n "todos_direitos_reservados_ic" }}</span>
-  <ul class="social">
+  <!--<ul class="social">
     <li><a href="https://www.youtube.com/@institutodecomputacao-ufrj2797" target="_blank" rel="noreferrer"><i class="bi bi-youtube"></i></a></li>
     <li><a href="https://github.com/ic-ufrj" target="_blank" rel="noreferrer"><i class="bi bi-github"></i></a></li>
-  </ul>
+  </ul>-->
 </div>
 
