adicionado "Bloco E" e mapa em português

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <span>{{ i18n "localizacao" }}</span>
     <p>
       Centro de Ciências Matemáticas e da Natureza
-      <br>Avenida Athos da Silveira Ramos, 274
+      <br>Avenida Athos da Silveira Ramos, 274 - Bloco E
       <br>Cidade Universitária
       <br>Rio de Janeiro, RJ, Brasil
       <br>CEP: 21941-916
