--- a/layouts/shortcodes/docentes.html
+++ b/layouts/shortcodes/docentes.html
@@ -4,30 +4,27 @@
   {{- $data = $data | append $item -}}
 {{- end -}}
 
-{{- $cargos_professores := slice "titular" "adjunto" "associado" "assistente" "substituto" -}}
-{{- $data := where $data "cargo" "in" $cargos_professores -}}
+{{- $data := where $data "cargo" "in" .Params -}}
 {{- $data := sort $data "nome" -}}
 
 <ul class="cards-pessoais">
   {{ range $data }}
-    {{ if .cargo | in $cargos_professores }}
-      <li class="card-pessoal">
-        <!--<img src="{{ .avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">-->
-        <span class="nome">{{ .nome }}</span>
-        <span class="cargo">{{ i18n .cargo }}</span>
-        {{ if .email }}
-          <span class="email">{{ .email }}</span>
-        {{ else }}
-          <span class="email">{{ .username }}@<span>ic.</span>ufrj.<span>gov.</span>br</span>
-        {{ end }}
-        {{ if .lattes }}
-          <a href="{{ .lattes }}">{{ i18n "lattes" }}</a>
-        {{ end }}
-        {{ if .site }}
-          <a href="{{ .site }}">{{ i18n "pagina_pessoal" }}</a>
-        {{ end }}
-      </li>
-    {{ end }}
+    <li class="card-pessoal">
+      <!--<img src="{{ .avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">-->
+      <span class="nome">{{ .nome }}</span>
+      <span class="cargo">{{ i18n .cargo }}</span>
+      {{ if .email }}
+        <span class="email">{{ .email }}</span>
+      {{ else }}
+        <span class="email">{{ .username }}@<span>ic.</span>ufrj.<span>gov.</span>br</span>
+      {{ end }}
+      {{ if .lattes }}
+        <a href="{{ .lattes }}">{{ i18n "lattes" }}</a>
+      {{ end }}
+      {{ if .site }}
+        <a href="{{ .site }}">{{ i18n "pagina_pessoal" }}</a>
+      {{ end }}
+    </li>
   {{ end }}
 </ul>
 
