--- a/themes/temaic/layouts/index.pt.html
+++ b/themes/temaic/layouts/index.pt.html
@@ -5,7 +5,7 @@
 <style>
 
 .container-imagem-principal {
-  background-color: #FF3333;
+  background-color: #960D07;
   padding: 0;
   margin: 0;
   width: 100%;
