--- a/layouts/shortcodes/email.html
+++ b/layouts/shortcodes/email.html
@@ -1,3 +1,3 @@
-
+<!-- Nós obfuscamos os emails para evitar spam. Veja a classe "email" no CSS -->
 <span class="email">{{ .Get 0 }}@<span>ic.</span>ufrj.<span>gov.</span>br</span>
 
