--- a/layouts/shortcodes/docentes.html
+++ b/layouts/shortcodes/docentes.html
@@ -13,11 +13,7 @@
       <!--<img src="{{ .avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">-->
       <span class="nome">{{ .nome }}</span>
       <span class="cargo">{{ i18n .cargo }}</span>
-      {{ if .email }}
-        <span class="email">{{ .email }}</span>
-      {{ else }}
-        <span class="email">{{ .username }}@<span>ic.</span>ufrj.<span>gov.</span>br</span>
-      {{ end }}
+      {{ partial "email.html" (.email | default .username) }}
       {{ if .lattes }}
         <a href="{{ .lattes }}">{{ i18n "lattes" }}</a>
       {{ end }}
