--- a/layouts/shortcodes/docentes.html
+++ b/layouts/shortcodes/docentes.html
@@ -4,12 +4,16 @@
   {{- $data = $data | append $item -}}
 {{- end -}}
 
-{{- $data := where $data "cargo" "in" .Params -}}
 {{- $data := sort $data "nome" -}}
+{{- $fdata := where $data "cargo" "in" .Params -}}
 
 <ul class="cards-pessoais">
-  {{ range $data }}
-    <li class="card-pessoal">
+  {{ range $fdata }}
+    {{ $grupos := slice }}
+    {{ range (where $data "membros" "intersect" (slice .username)) }}
+      {{ $grupos = $grupos | append . }}
+    {{ end }}
+    <li class="card-pessoal" id="{{ .username }}">
       <!--<img src="{{ .avatar | default "/author_img/default.png" }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">-->
       <span class="nome">{{ .nome }}</span>
       <span class="cargo">{{ i18n .cargo }}</span>
@@ -19,6 +23,23 @@
       {{ end }}
       {{ if .site }}
         <a href="{{ .site }}">{{ i18n "pagina_pessoal" }}</a>
+      {{ end }}
+      {{ range $grupos }}
+        <a class="grupo" href="{{ i18n "pag-grupos" }}#{{ .username }}">
+          {{ .nome }}
+        </a>
+      {{ end }}
+      {{ range .membros }}
+        {{ $membro := index site.Data.pessoas_e_grupos . }}
+        {{ $pag := "" }}
+        {{ if in (slice "tecnico") $membro.cargo }}
+          {{ $pag = i18n "pag-tecnicos" }}
+        {{ else if in (slice "titular" "adjunto" "associado" "assistente" "substituto") $membro.cargo }}
+          {{ $pag = i18n "pag-docentes" }}
+        {{ end }}
+        <a class="membro" href="{{ $pag }}#{{ . }}">
+        {{ $membro.nome }}
+        </a>
       {{ end }}
     </li>
   {{ end }}
