limpeza das páginas de docentes e estrutura administrativa
Refs #13

--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -557,6 +557,15 @@ article img {
 	margin-top: 0;
 }
 
+.card-pessoal .membro {
+	color: var(--cor-texto);
+	text-decoration: none;
+}
+.card-pessoal .membro:hover {
+	text-decoration: underline;
+}
+
+
 .masshead {
 	display: flex;
 	height: 100px;
