--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -244,7 +244,7 @@ header a:hover {
 /* Se refere às subcategorias do menu escondido */
 #main-header > ul > li > ul > li {
 	border: 1px solid var(--cor-borda-cinza);
-	width: 250px;
+	width: 200px;
 	padding: 20px;
 	border-radius: 10px;
 }
@@ -267,41 +267,56 @@ header a:hover {
 
 /* Sempre verificar se os breakpoints repetem */
 
-@media screen and (min-width: 700px) and (max-width: 1150px) {
-	#main-header > a > p {
-		display: none;
-	}
-}
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1300px) {
 	:root {
 		--menu-padding: 10px;
 	}
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 900px) and (max-width: 1150px) {
+	#main-header > a > p {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 1100px) {
 	:root {
 		--menu-total-height: 250px;
 	}
 
 	#links-header > ul {
 		font-size: 11px;
+		gap: 5px;
 	}
 
 	#main-header {
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-evenly;
+		height: auto;
+		padding: 20px;
+	}
+
+	#main-header > a {
+		height: 80px;
+		margin-top: 20px;
 	}
 
 	#main-header > ul {
-		align-items: center;
-		flex-wrap: wrap;
-		justify-content: space-between;
+		width: 100%;
+		flex-direction: column;
+		align-items: flex-end;
 	}
 
-	#main-header > ul > li > span {
-		height: 30px;
+	#main-header > ul > li > button {
+		font-size: 85%;
+	}
+
+	#main-header > ul > li > ul {
+		flex-direction: column;
+		right: 0px;
+		z-index: 10;
 	}
 }
 
